--- a/style.css
+++ b/style.css
@@ -6,12 +6,14 @@
   box-sizing: border-box;
 }
 :root {
-  --primary-color: hsl(170, 100%, 26%);
+  --hue: 290;
+  --primary-color: hsl(var(--hue), 100%, 26%);
   --headline: hsl(210, 11%, 15%);
   --paragraph: hsl(210, 9%, 31%);
   --boxstats: hsl(39, 100%, 97%);
-  --fundo: hsl(148, 23%, 89%);
+  --fundo: hsl(cal(var(--hue) -22), 23%, 89%);
   --bg-light: hsl(180, 14%, 97%);
+  --brand-button-dark: hsl(var(--hue), 100%, 14%);
 
   font-size: 62.5%; /* 1 rem = 10px*/
   --nav-height: 7.2rem;
@@ -83,6 +85,65 @@ section .content p {
   color: var(--paragraph);
 }
 
+.button {
+  background: var(--primary-color);
+
+  border: none;
+  border-radius: 4rem;
+
+  margin-bottom: 6rem;
+
+  padding: 1.6rem 3.2rem;
+  width: fit-content;
+
+  color: white;
+  font-size: 1.4rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-decoration: none;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1.6rem;
+
+  transition: background 500ms;
+}
+
+.button:hover {
+  background-color: var(--brand-button-dark);
+}
+
+.social-links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 3.2rem;
+}
+
+/* CUSTOM COLORS*/
+#service .card circle {
+  fill: var(--fundo);
+}
+
+#navigation .logo path[fill*='#00856F'],
+#backToTopButton circle {
+  fill: var(--primary-color);
+}
+
+button.open-menu path[stroke*='00856F'],
+#contact li path {
+  stroke: var(--primary-color);
+}
+
+body.menu-expanded #navigation .logo path,
+#navigation.scroll .logo path {
+  fill: white;
+}
+
+#navigation.scroll button.open-menu path[stroke*='00856F'] {
+  stroke: white;
+}
 /*========================NAVEGATION==================================*/
 nav {
   display: flex;
@@ -104,12 +165,6 @@ nav.scroll {
   background: var(--primary-color);
 }
 
-nav.scroll .logo path {
-  fill: white;
-}
-nav.scroll button path {
-  stroke: white;
-}
 nav button {
   background: none;
   border: none;
@@ -192,11 +247,14 @@ body.menu-expanded .menu {
   margin-top: 4.8rem;
   margin-bottom: 8rem;
 }
-.social-links {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 3.2rem;
+
+.menu .button:hover {
+  background-color: var(--primary-color);
+  color: white;
+
+  transition: 200ms;
+
+  filter: brightness(1.3);
 }
 
 body.menu-expanded .logo,
@@ -235,28 +293,12 @@ body.menu-expanded button path {
   color: var(--paragraph);
   margin-bottom: 3.2rem;
 }
-#home button {
-  background: var(--primary-color);
-  border: none;
-  border-radius: 4rem;
-  margin-bottom: 6rem;
 
-  height: 6.2rem;
-  width: 26.3rem;
-
-  color: #fff;
-  text-transform: uppercase;
-  font-size: 1.4rem;
-  font-weight: 700;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 1.6rem;
-
-  margin-left: auto;
+#home .button {
   margin-right: auto;
+  margin-left: auto;
 }
+
 #home .imagemmulher {
   width: 26.4rem;
   display: block;
@@ -320,6 +362,7 @@ body.menu-expanded button path {
   margin-block: 1.6rem;
   color: var(--headline);
 }
+
 #services .cards .card p {
   font-weight: 400;
   font-size: 1.6rem;
@@ -341,4 +384,80 @@ body.menu-expanded button path {
 #about .content p {
   margin-top: 2.4rem;
   margin-bottom: 6rem;
+}
+/*=============================CONTACT===============================*/
+
+#contact {
+  text-align: left;
+}
+
+#contact header {
+  margin-bottom: 3.2rem;
+}
+
+#contact ul {
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+  margin-bottom: 3.2rem;
+}
+
+#contact ul li {
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+}
+/*=============================FOOTER===============================*/
+footer {
+  background-color: var(--primary-color);
+  padding-block: 6rem;
+
+  text-align: left;
+
+  color: white;
+}
+
+footer .logo {
+  display: inline-block;
+  margin-bottom: 2.4rem;
+}
+
+footer .logo svg {
+  width: 23.6rem;
+  height: 3.1rem;
+}
+
+footer .logo path {
+  fill: white;
+}
+
+footer p {
+  color: var(--boxstats);
+  line-height: 2;
+
+  margin-bottom: 3.2rem;
+}
+
+footer .social-links {
+  justify-content: flex-start;
+}
+
+/*  BACK TO TOP*/
+
+#backToTopButton {
+  position: fixed;
+  bottom: 1rem;
+  right: 2.5rem;
+
+  opacity: 0;
+  visibility: hidden;
+
+  transform: translateY(100%);
+  transition: 200ms;
+}
+
+#backToTopButton.show {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0%);
 }
