--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   box-sizing: border-box;
 }
 :root {
-  --hue: 290;
+  --hue: 190;
   --primary-color: hsl(var(--hue), 100%, 26%);
   --headline: hsl(210, 11%, 15%);
   --paragraph: hsl(210, 9%, 31%);
@@ -276,7 +276,7 @@ body.menu-expanded button path {
 #home::before {
   content: '';
   width: 100%;
-  height: calc(108rem + var(--nav-height));
+  height: calc(80% + var(--nav-height));
   background-color: var(--fundo);
   display: block;
 
@@ -286,6 +286,7 @@ body.menu-expanded button path {
   z-index: -1;
 }
 #home {
+  padding-block: 0;
   padding-top: calc(4.1rem + var(--nav-height));
 }
 
@@ -468,8 +469,28 @@ footer .social-links {
 /*=================RESPONSIVE============*/
 @media (min-width: 1024px) {
   /*=================GERAL===========*/
+  body {
+    overflow: auto;
+  }
   .wrapper {
     width: min(112rem, 100%);
+    display: grid;
+  }
+
+  section {
+    padding-block: 16rem;
+  }
+
+  section h2 {
+    font-size: 4rem;
+    line-height: 5.2rem;
+  }
+  .col-a {
+    grid-area: A;
+  }
+
+  .col-b {
+    grid-area: B;
   }
   /*=================NAVIGATION============*/
   /* reset*/
@@ -529,6 +550,12 @@ footer .social-links {
     text-transform: uppercase;
   }
 
+  nav#navigation .menu a.button:hover {
+    background-color: var(--primary-color);
+    border: none;
+    color: white;
+  }
+
   nav#navigation.scroll .menu ul li a {
     color: var(--bg-light);
     opacity: 0.6;
@@ -547,31 +574,96 @@ footer .social-links {
     font-weight: 700;
   }
 
-  nav#navigation .menu li a::after {
-    content: '';
-    width: 0%;
-    height: 2px;
-    background-color: var(--primary-color);
-
-    position: relative;
-    bottom: -2rem;
-    left: -1rem;
-
-    display: block;
-
-    transform: width 0.2s;
+  /*=========HOME==============*/
+  #home::before {
+    height: calc(96% - var(--nav-height));
+  }
+  #home {
+    padding-top: var(--nav-height);
+  }
+  #home .wrapper {
+    grid-template-columns: 60.5rem 1fr;
+    grid-template-areas:
+      'A B'
+      'C C';
   }
 
-  nav#navigation.scroll .menu li a::after {
-    background-color: white;
+  #home .col-a {
+    text-align: left;
+    align-self: center;
   }
 
-  nav#navigation .menu li a:hover::after {
-    padding-inline: 1.3rem;
-    width: 100%;
+  #home h1 {
+    font-size: 5.2rem;
   }
 
-  nav#navigation.scroll .menu li a:hover {
-    opacity: 1;
+  #home .content p {
+    font-size: 1.8rem;
+  }
+
+  #home .stats {
+    grid-area: C;
+
+    flex-direction: row;
+    padding: 6rem;
+    gap: 0;
+  }
+
+  #home .stats .stat + .stat {
+    border-left: 1px solid var(--primary-color);
+  }
+
+  #home .stats .stat {
+    flex: 1;
+  }
+
+  #home .button {
+    margin: 0;
+  }
+
+  #home .imagemmulher {
+    width: 42rem;
+  }
+  /*=========SERVICES==============*/
+
+  #services h2 {
+    width: 47rem;
+    margin-inline: auto;
+  }
+
+  #services .cards {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  #services .card {
+    width: 30%;
+    flex-grow: 1;
+  }
+
+  /*=========ABOUT==============*/
+
+  #about .wrapper {
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: 'B A';
+  }
+
+  #about img {
+    width: 48rem;
+  }
+
+  #about .content p {
+    margin-bottom: 0;
+    text-align: justify;
+  }
+
+  #about .col-a {
+    align-self: center;
+  }
+
+  /*=========CONTACT==============*/
+  #contact .wrapper {
+    grid-template-columns: 1fr 1fr;
+    grid-area: 'A B';
   }
 }
